--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.logger.noModule=FATAL, consoleAppender
-log4j.logger.com.lc.moviehell=DEBUG, consoleAppender
-log4j.logger.org.springframework=INFO, consoleAppender
+log4j.logger.com.lc.moviehell=DEBUG, consoleAppender, tomcatRolling
+log4j.logger.org.springframework=INFO, consoleAppender, tomcatRolling
 
 log4j.appender.consoleAppender = org.apache.log4j.ConsoleAppender
 log4j.appender.consoleAppender.Encoding = UTF-8
@@ -10,7 +10,7 @@ log4j.appender.consoleAppender.layout.ConversionPattern = [%-5p]%d{ISO8601}, [Cl
 log4j.appender.tomcatRolling=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.tomcatRolling.Append = true
 log4j.appender.tomcatRolling.BufferedIO = false
-log4j.appender.tomcatRolling.File = movie.log
+log4j.appender.tomcatRolling.File = /root/movie.log
 log4j.appender.tomcatRolling.DatePattern='.'yyyy-MM-dd
 log4j.appender.tomcatRolling.Encoding = UTF-8
 log4j.appender.tomcatRolling.layout = org.apache.log4j.PatternLayout
