--- a/pom.xml
+++ b/pom.xml
@@ -172,5 +172,17 @@
             <version>3.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.rapid-framework</groupId>
+            <artifactId>rapid-core</artifactId>
+            <version>4.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.rapid-framework</groupId>
+            <artifactId>rapid-generator</artifactId>
+            <version>4.0.5</version>
+        </dependency>
+
     </dependencies>
 </project>
