--- a/pom.xml
+++ b/pom.xml
@@ -192,5 +192,10 @@
             <version>4.0.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
     </dependencies>
 </project>
