--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.logger.noModule=FATAL, consoleAppender
-log4j.logger.com.lc.moviehell=DEBUG, consoleAppender, tomcatRolling
-log4j.logger.org.springframework=INFO, consoleAppender, tomcatRolling
+log4j.logger.com.lc.moviehell=DEBUG, tomcatRolling
+log4j.logger.org.springframework=INFO, tomcatRolling
 
 log4j.appender.consoleAppender = org.apache.log4j.ConsoleAppender
 log4j.appender.consoleAppender.Encoding = UTF-8
