增加美剧板块

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,7 @@
 log4j.logger.noModule=FATAL, consoleAppender
 log4j.logger.com.lc.moviehell=DEBUG, tomcatRolling
 log4j.logger.org.springframework=INFO, tomcatRolling
+log4j.logger.us.codecraft.webmagic=INFO, tomcatRolling
 
 log4j.appender.consoleAppender = org.apache.log4j.ConsoleAppender
 log4j.appender.consoleAppender.Encoding = UTF-8
@@ -10,10 +11,10 @@ log4j.appender.consoleAppender.layout.ConversionPattern = [%-5p]%d{ISO8601}, [Cl
 log4j.appender.tomcatRolling=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.tomcatRolling.Append = true
 log4j.appender.tomcatRolling.BufferedIO = false
-log4j.appender.tomcatRolling.File = /home/lc/log/movie.log
+log4j.appender.tomcatRolling.File = /home/lc/logs/moviehell/moviehell.log
 log4j.appender.tomcatRolling.DatePattern='.'yyyy-MM-dd
 log4j.appender.tomcatRolling.Encoding = UTF-8
 log4j.appender.tomcatRolling.layout = org.apache.log4j.PatternLayout
 log4j.appender.tomcatRolling.layout.ConversionPattern = [%-5p]%d{ISO8601}, [Class]%-c{1}, %m%n
-log4j.appender.logServerRolling.MaxBackupIndex = 2
+log4j.appender.logServerRolling.MaxBackupIndex = 5
 log4j.appender.logServerRolling.MaxFileSize = 64MB
