--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
-log4j.logger.noModule=FATAL, consoleAppender
-log4j.logger.com.lc.moviehell=DEBUG, tomcatRolling
+log4j.logger.noModule=FATAL, tomcatRolling
+log4j.logger.com.lc.moviehell=INFO, tomcatRolling
 log4j.logger.org.springframework=INFO, tomcatRolling
 log4j.logger.us.codecraft.webmagic=INFO, tomcatRolling
 
